--- a/content0.html
+++ b/content0.html
@@ -1,4 +1,89 @@
-<a id="ayala"></a>
+<a id="seattle"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Seattle</h3>
+  </li>
+  <li class="date">
+    June 2015
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/seattle/IMG_2490.jpg"
+      title=""
+      onclick="return hs.expand(this, config_seattle)">
+      <img width="160" height="120" src="thumbs/seattle/IMG_2490.jpg" alt="IMG_2490.jpg" />
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/seattle/IMG_2493.jpg"
+      title=""
+      onclick="return hs.expand(this, config_seattle)">
+      <img width="160" height="120" src="thumbs/seattle/IMG_2493.jpg" alt="IMG_2493.jpg" />
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/seattle/IMG_2502.jpg"
+      title=""
+      onclick="return hs.expand(this, config_seattle)">
+      <img width="160" height="120" src="thumbs/seattle/IMG_2502.jpg" alt="IMG_2502.jpg" />
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/seattle/IMG_2512.jpg"
+      title=""
+      onclick="return hs.expand(this, config_seattle)">
+      <img width="160" height="120" src="thumbs/seattle/IMG_2512.jpg" alt="IMG_2512.jpg" />
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/seattle/IMG_2516.jpg"
+      title=""
+      onclick="return hs.expand(this, config_seattle)">
+      <img width="160" height="120" src="thumbs/seattle/IMG_2516.jpg" alt="IMG_2516.jpg" />
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/seattle/IMG_2520.jpg"
+      title=""
+      onclick="return hs.expand(this, config_seattle)">
+      <img width="160" height="120" src="thumbs/seattle/IMG_2520.jpg" alt="IMG_2520.jpg" />
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/seattle/IMG_2527.jpg"
+      title=""
+      onclick="return hs.expand(this, config_seattle)">
+      <img width="160" height="120" src="thumbs/seattle/IMG_2527.jpg" alt="IMG_2527.jpg" />
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/seattle/IMG_2542.jpg"
+      title=""
+      onclick="return hs.expand(this, config_seattle)">
+      <img width="160" height="120" src="thumbs/seattle/IMG_2542.jpg" alt="IMG_2542.jpg" />
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/seattle/IMG_2550.jpg"
+      title=""
+      onclick="return hs.expand(this, config_seattle)">
+      <img width="160" height="120" src="thumbs/seattle/IMG_2550.jpg" alt="IMG_2550.jpg" />
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/seattle/IMG_2566.jpg"
+      title=""
+      onclick="return hs.expand(this, config_seattle)">
+      <img width="160" height="120" src="thumbs/seattle/IMG_2566.jpg" alt="IMG_2566.jpg" />
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
+<a id="loverleap"></a>
 <ul class="titlebar">
   <li class="title">
     <h3>Lover's Leap</h3>
@@ -15,35 +100,50 @@
     <a class="highslide" href="hq/loversleap/IMG_2448.jpg"
       title=""
       onclick="return hs.expand(this, config_loversleap)">
-      <img width="90" height="120" src="thumbs/loversleap/IMG_2448.jpg" alt="IMG_2448.jpg" />
+      <img class="lazy galleries/loversleap" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/loversleap/IMG_2448.jpg" alt="IMG_2448.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/loversleap/IMG_2448.jpg" alt="IMG_2448.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot2">
     <a class="highslide" href="hq/loversleap/IMG_2457.jpg"
       title=""
       onclick="return hs.expand(this, config_loversleap)">
-      <img width="90" height="120" src="thumbs/loversleap/IMG_2457.jpg" alt="IMG_2457.jpg" />
+      <img class="lazy galleries/loversleap" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/loversleap/IMG_2457.jpg" alt="IMG_2457.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/loversleap/IMG_2457.jpg" alt="IMG_2457.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot3">
     <a class="highslide" href="hq/loversleap/IMG_2459.jpg"
       title=""
       onclick="return hs.expand(this, config_loversleap)">
-      <img width="160" height="120" src="thumbs/loversleap/IMG_2459.jpg" alt="IMG_2459.jpg" />
+      <img class="lazy galleries/loversleap" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/loversleap/IMG_2459.jpg" alt="IMG_2459.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/loversleap/IMG_2459.jpg" alt="IMG_2459.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot4">
     <a class="highslide" href="hq/loversleap/IMG_2468.jpg"
       title=""
       onclick="return hs.expand(this, config_loversleap)">
-      <img width="160" height="120" src="thumbs/loversleap/IMG_2468.jpg" alt="IMG_2468.jpg" />
+      <img class="lazy galleries/loversleap" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/loversleap/IMG_2468.jpg" alt="IMG_2468.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/loversleap/IMG_2468.jpg" alt="IMG_2468.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot5">
     <a class="highslide" href="hq/loversleap/IMG_2487.jpg"
       title=""
       onclick="return hs.expand(this, config_loversleap)">
-      <img width="160" height="120" src="thumbs/loversleap/IMG_2487.jpg" alt="IMG_2487.jpg" />
+      <img class="lazy galleries/loversleap" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/loversleap/IMG_2487.jpg" alt="IMG_2487.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/loversleap/IMG_2487.jpg" alt="IMG_2487.jpg" />
+      </noscript>
     </a>
   </div>
   <div style="clear:both"></div>
@@ -542,81 +642,6 @@
       <img class="lazy galleries/sailing" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sailing/IMG_2761.jpg" alt="IMG_2761.jpg" />
       <noscript>
         <img width="180" height="120" src="thumbs/sailing/IMG_2761.jpg" alt="IMG_2761.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="poemealoup"></a>
-<ul class="titlebar">
-  <li class="title">
-    <h3>Poème à Loup</h3>
-  </li>
-  <li class="date">
-    September 2014
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/poemealoup/IMG_2063.jpg"
-      title=""
-      onclick="return hs.expand(this, config_poemealoup)">
-      <img class="lazy galleries/poemealoup" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2063.jpg" alt="IMG_2063.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/poemealoup/IMG_2063.jpg" alt="IMG_2063.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/poemealoup/IMG_2065.jpg"
-      title=""
-      onclick="return hs.expand(this, config_poemealoup)">
-      <img class="lazy galleries/poemealoup" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2065.jpg" alt="IMG_2065.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/poemealoup/IMG_2065.jpg" alt="IMG_2065.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/poemealoup/IMG_2067.jpg"
-      title=""
-      onclick="return hs.expand(this, config_poemealoup)">
-      <img class="lazy galleries/poemealoup" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2067.jpg" alt="IMG_2067.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/poemealoup/IMG_2067.jpg" alt="IMG_2067.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/poemealoup/IMG_2071.jpg"
-      title=""
-      onclick="return hs.expand(this, config_poemealoup)">
-      <img class="lazy galleries/poemealoup" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2071.jpg" alt="IMG_2071.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/poemealoup/IMG_2071.jpg" alt="IMG_2071.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/poemealoup/IMG_2077.jpg"
-      title=""
-      onclick="return hs.expand(this, config_poemealoup)">
-      <img class="lazy galleries/poemealoup" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2077.jpg" alt="IMG_2077.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/poemealoup/IMG_2077.jpg" alt="IMG_2077.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/poemealoup/IMG_2079.jpg"
-      title=""
-      onclick="return hs.expand(this, config_poemealoup)">
-      <img class="lazy galleries/poemealoup" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2079.jpg" alt="IMG_2079.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/poemealoup/IMG_2079.jpg" alt="IMG_2079.jpg" />
       </noscript>
     </a>
   </div>
