--- a/content3.html
+++ b/content3.html
@@ -1,3 +1,139 @@
+<a id="Tahoe"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Tahoe</h3>
+  </li>
+  <li class="date">
+    June 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/tahoe/05.jpg"
+      title=""
+      onclick="return hs.expand(this, config_tahoe)">
+      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/05.jpg" alt="05.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/tahoe/05.jpg" alt="05.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/tahoe/25.jpg"
+      title=""
+      onclick="return hs.expand(this, config_tahoe)">
+      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/25.jpg" alt="25.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/tahoe/25.jpg" alt="25.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/tahoe/30.jpg"
+      title=""
+      onclick="return hs.expand(this, config_tahoe)">
+      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/30.jpg" alt="30.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/tahoe/30.jpg" alt="30.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/tahoe/35.jpg"
+      title=""
+      onclick="return hs.expand(this, config_tahoe)">
+      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/35.jpg" alt="35.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/tahoe/35.jpg" alt="35.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/tahoe/40.jpg"
+      title=""
+      onclick="return hs.expand(this, config_tahoe)">
+      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/40.jpg" alt="40.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/tahoe/40.jpg" alt="40.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/tahoe/45.jpg"
+      title=""
+      onclick="return hs.expand(this, config_tahoe)">
+      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/45.jpg" alt="45.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/tahoe/45.jpg" alt="45.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/tahoe/50.jpg"
+      title=""
+      onclick="return hs.expand(this, config_tahoe)">
+      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/50.jpg" alt="50.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/tahoe/50.jpg" alt="50.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/tahoe/56.jpg"
+      title=""
+      onclick="return hs.expand(this, config_tahoe)">
+      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/56.jpg" alt="56.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/tahoe/56.jpg" alt="56.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/tahoe/58.jpg"
+      title=""
+      onclick="return hs.expand(this, config_tahoe)">
+      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/58.jpg" alt="58.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/tahoe/58.jpg" alt="58.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/tahoe/60.jpg"
+      title=""
+      onclick="return hs.expand(this, config_tahoe)">
+      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/60.jpg" alt="60.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/tahoe/60.jpg" alt="60.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/tahoe/DSCN0628.jpg"
+      title=""
+      onclick="return hs.expand(this, config_tahoe)">
+      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/DSCN0628.jpg" alt="DSCN0628.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/tahoe/DSCN0628.jpg" alt="DSCN0628.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/tahoe/IMG_0709.jpg"
+      title=""
+      onclick="return hs.expand(this, config_tahoe)">
+      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/IMG_0709.jpg" alt="IMG_0709.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/tahoe/IMG_0709.jpg" alt="IMG_0709.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
+
 <a id="Russell"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -789,122 +925,6 @@
       <img class="lazy galleries/machete" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/machete/IMG_0178.jpg" alt="IMG_0178.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/machete/IMG_0178.jpg" alt="IMG_0178.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-
-<a id="QuatreTetes"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Quatre T&ecirc;tes</h3>
-  </li>
-  <li class="date">
-    January 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/quatre_tetes/1.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/1.jpg" alt="1.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/quatre_tetes/1.jpg" alt="1.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/quatre_tetes/2.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/2.jpg" alt="2.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/2.jpg" alt="2.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/quatre_tetes/3.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/3.jpg" alt="3.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/3.jpg" alt="3.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/quatre_tetes/4.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/4.jpg" alt="4.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/4.jpg" alt="4.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/quatre_tetes/IMG_0063.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0063.jpg" alt="IMG_0063.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/quatre_tetes/IMG_0063.jpg" alt="IMG_0063.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/quatre_tetes/IMG_0066.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0066.jpg" alt="IMG_0066.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/IMG_0066.jpg" alt="IMG_0066.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/quatre_tetes/IMG_0068.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0068.jpg" alt="IMG_0068.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/IMG_0068.jpg" alt="IMG_0068.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/quatre_tetes/IMG_0078.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0078.jpg" alt="IMG_0078.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/quatre_tetes/IMG_0078.jpg" alt="IMG_0078.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/quatre_tetes/IMG_0082.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0082.jpg" alt="IMG_0082.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/IMG_0082.jpg" alt="IMG_0082.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/quatre_tetes/IMG_0088.jpg"
-      title=""
-      onclick="return hs.expand(this, config_quatre_tetes)">
-      <img class="lazy galleries/quatre_tetes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/quatre_tetes/IMG_0088.jpg" alt="IMG_0088.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/quatre_tetes/IMG_0088.jpg" alt="IMG_0088.jpg" />
       </noscript>
     </a>
   </div>
