--- a/content1.html
+++ b/content1.html
@@ -1,3 +1,78 @@
+<a id="poemealoup"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Poème à Loup</h3>
+  </li>
+  <li class="date">
+    September 2014
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/poemealoup/IMG_2063.jpg"
+      title=""
+      onclick="return hs.expand(this, config_poemealoup)">
+      <img class="lazy galleries/poemealoup" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2063.jpg" alt="IMG_2063.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/poemealoup/IMG_2063.jpg" alt="IMG_2063.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/poemealoup/IMG_2065.jpg"
+      title=""
+      onclick="return hs.expand(this, config_poemealoup)">
+      <img class="lazy galleries/poemealoup" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2065.jpg" alt="IMG_2065.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/poemealoup/IMG_2065.jpg" alt="IMG_2065.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/poemealoup/IMG_2067.jpg"
+      title=""
+      onclick="return hs.expand(this, config_poemealoup)">
+      <img class="lazy galleries/poemealoup" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2067.jpg" alt="IMG_2067.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/poemealoup/IMG_2067.jpg" alt="IMG_2067.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/poemealoup/IMG_2071.jpg"
+      title=""
+      onclick="return hs.expand(this, config_poemealoup)">
+      <img class="lazy galleries/poemealoup" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2071.jpg" alt="IMG_2071.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/poemealoup/IMG_2071.jpg" alt="IMG_2071.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/poemealoup/IMG_2077.jpg"
+      title=""
+      onclick="return hs.expand(this, config_poemealoup)">
+      <img class="lazy galleries/poemealoup" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2077.jpg" alt="IMG_2077.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/poemealoup/IMG_2077.jpg" alt="IMG_2077.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/poemealoup/IMG_2079.jpg"
+      title=""
+      onclick="return hs.expand(this, config_poemealoup)">
+      <img class="lazy galleries/poemealoup" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2079.jpg" alt="IMG_2079.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/poemealoup/IMG_2079.jpg" alt="IMG_2079.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="ptreyes"></a>
 <ul class="titlebar">
   <li class="title">
@@ -870,121 +945,6 @@
       <img class="lazy galleries/berard" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/berard/90.jpg" alt="90.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/berard/90.jpg" alt="90.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="hpointe"></a>
-<ul class="titlebar">
-  <li class="title">
-    <h3>Haute Pointe</h3>
-  </li>
-  <li class="date">
-    January 2014
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/hpointe/IMG_1238.jpg"
-      title=""
-      onclick="return hs.expand(this, config_hpointe)">
-      <img class="lazy galleries/hpointe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1238.jpg" alt="IMG_1238.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/hpointe/IMG_1238.jpg" alt="IMG_1238.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/hpointe/IMG_1241.jpg"
-      title=""
-      onclick="return hs.expand(this, config_hpointe)">
-      <img class="lazy galleries/hpointe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1241.jpg" alt="IMG_1241.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/hpointe/IMG_1241.jpg" alt="IMG_1241.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/hpointe/IMG_1245.jpg"
-      title=""
-      onclick="return hs.expand(this, config_hpointe)">
-      <img class="lazy galleries/hpointe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1245.jpg" alt="IMG_1245.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/hpointe/IMG_1245.jpg" alt="IMG_1245.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/hpointe/IMG_1259.jpg"
-      title=""
-      onclick="return hs.expand(this, config_hpointe)">
-      <img class="lazy galleries/hpointe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1259.jpg" alt="IMG_1259.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/hpointe/IMG_1259.jpg" alt="IMG_1259.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/hpointe/IMG_1267.jpg"
-      title=""
-      onclick="return hs.expand(this, config_hpointe)">
-      <img class="lazy galleries/hpointe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1267.jpg" alt="IMG_1267.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/hpointe/IMG_1267.jpg" alt="IMG_1267.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/hpointe/IMG_1268.jpg"
-      title=""
-      onclick="return hs.expand(this, config_hpointe)">
-      <img class="lazy galleries/hpointe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1268.jpg" alt="IMG_1268.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/hpointe/IMG_1268.jpg" alt="IMG_1268.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/hpointe/IMG_1271.jpg"
-      title=""
-      onclick="return hs.expand(this, config_hpointe)">
-      <img class="lazy galleries/hpointe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1271.jpg" alt="IMG_1271.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/hpointe/IMG_1271.jpg" alt="IMG_1271.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/hpointe/IMG_1283.jpg"
-      title=""
-      onclick="return hs.expand(this, config_hpointe)">
-      <img class="lazy galleries/hpointe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1283.jpg" alt="IMG_1283.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/hpointe/IMG_1283.jpg" alt="IMG_1283.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/hpointe/IMG_1296.jpg"
-      title=""
-      onclick="return hs.expand(this, config_hpointe)">
-      <img class="lazy galleries/hpointe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1296.jpg" alt="IMG_1296.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/hpointe/IMG_1296.jpg" alt="IMG_1296.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/hpointe/IMG_1299.jpg"
-      title=""
-      onclick="return hs.expand(this, config_hpointe)">
-      <img class="lazy galleries/hpointe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1299.jpg" alt="IMG_1299.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/hpointe/IMG_1299.jpg" alt="IMG_1299.jpg" />
       </noscript>
     </a>
   </div>
