--- a/content2.html
+++ b/content2.html
@@ -1,3 +1,118 @@
+<a id="hpointe"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Haute Pointe</h3>
+  </li>
+  <li class="date">
+    January 2014
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/hpointe/IMG_1238.jpg"
+      title=""
+      onclick="return hs.expand(this, config_hpointe)">
+      <img class="lazy galleries/hpointe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1238.jpg" alt="IMG_1238.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/hpointe/IMG_1238.jpg" alt="IMG_1238.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/hpointe/IMG_1241.jpg"
+      title=""
+      onclick="return hs.expand(this, config_hpointe)">
+      <img class="lazy galleries/hpointe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1241.jpg" alt="IMG_1241.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/hpointe/IMG_1241.jpg" alt="IMG_1241.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/hpointe/IMG_1245.jpg"
+      title=""
+      onclick="return hs.expand(this, config_hpointe)">
+      <img class="lazy galleries/hpointe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1245.jpg" alt="IMG_1245.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/hpointe/IMG_1245.jpg" alt="IMG_1245.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/hpointe/IMG_1259.jpg"
+      title=""
+      onclick="return hs.expand(this, config_hpointe)">
+      <img class="lazy galleries/hpointe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1259.jpg" alt="IMG_1259.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/hpointe/IMG_1259.jpg" alt="IMG_1259.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/hpointe/IMG_1267.jpg"
+      title=""
+      onclick="return hs.expand(this, config_hpointe)">
+      <img class="lazy galleries/hpointe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1267.jpg" alt="IMG_1267.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/hpointe/IMG_1267.jpg" alt="IMG_1267.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/hpointe/IMG_1268.jpg"
+      title=""
+      onclick="return hs.expand(this, config_hpointe)">
+      <img class="lazy galleries/hpointe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1268.jpg" alt="IMG_1268.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/hpointe/IMG_1268.jpg" alt="IMG_1268.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/hpointe/IMG_1271.jpg"
+      title=""
+      onclick="return hs.expand(this, config_hpointe)">
+      <img class="lazy galleries/hpointe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1271.jpg" alt="IMG_1271.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/hpointe/IMG_1271.jpg" alt="IMG_1271.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/hpointe/IMG_1283.jpg"
+      title=""
+      onclick="return hs.expand(this, config_hpointe)">
+      <img class="lazy galleries/hpointe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1283.jpg" alt="IMG_1283.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/hpointe/IMG_1283.jpg" alt="IMG_1283.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/hpointe/IMG_1296.jpg"
+      title=""
+      onclick="return hs.expand(this, config_hpointe)">
+      <img class="lazy galleries/hpointe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1296.jpg" alt="IMG_1296.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/hpointe/IMG_1296.jpg" alt="IMG_1296.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/hpointe/IMG_1299.jpg"
+      title=""
+      onclick="return hs.expand(this, config_hpointe)">
+      <img class="lazy galleries/hpointe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1299.jpg" alt="IMG_1299.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/hpointe/IMG_1299.jpg" alt="IMG_1299.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Bostan"></a>
 <ul class="titlebar">
   <li class="title">
@@ -793,139 +908,3 @@
   </div>
   <div style="clear:both"></div>
 </div>
-<a id="Tahoe"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Tahoe</h3>
-  </li>
-  <li class="date">
-    June 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/tahoe/05.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/05.jpg" alt="05.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tahoe/05.jpg" alt="05.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/tahoe/25.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/25.jpg" alt="25.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tahoe/25.jpg" alt="25.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/tahoe/30.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/30.jpg" alt="30.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tahoe/30.jpg" alt="30.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/tahoe/35.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/35.jpg" alt="35.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tahoe/35.jpg" alt="35.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/tahoe/40.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/40.jpg" alt="40.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tahoe/40.jpg" alt="40.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/tahoe/45.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/45.jpg" alt="45.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tahoe/45.jpg" alt="45.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/tahoe/50.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/50.jpg" alt="50.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tahoe/50.jpg" alt="50.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/tahoe/56.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/56.jpg" alt="56.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tahoe/56.jpg" alt="56.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/tahoe/58.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/58.jpg" alt="58.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/tahoe/58.jpg" alt="58.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/tahoe/60.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/60.jpg" alt="60.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tahoe/60.jpg" alt="60.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/tahoe/DSCN0628.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/DSCN0628.jpg" alt="DSCN0628.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tahoe/DSCN0628.jpg" alt="DSCN0628.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/tahoe/IMG_0709.jpg"
-      title=""
-      onclick="return hs.expand(this, config_tahoe)">
-      <img class="lazy galleries/tahoe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/tahoe/IMG_0709.jpg" alt="IMG_0709.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/tahoe/IMG_0709.jpg" alt="IMG_0709.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-
