--- a/index.html
+++ b/index.html
@@ -19,6 +19,84 @@
 
 <body>
 
+<a id="lassen"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Lassen Volcanic Park</h3>
+  </li>
+  <li class="date">
+    August 2015
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/lassen/IMG_2643.jpg"
+      title=""
+      onclick="return hs.expand(this, config_lassen)">
+      <img width="160" height="120" src="thumbs/lassen/IMG_2643.jpg" alt="IMG_2643.jpg" />
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/lassen/IMG_2653.jpg"
+      title=""
+      onclick="return hs.expand(this, config_lassen)">
+      <img width="160" height="120" src="thumbs/lassen/IMG_2653.jpg" alt="IMG_2653.jpg" />
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/lassen/IMG_2656.jpg"
+      title=""
+      onclick="return hs.expand(this, config_lassen)">
+      <img width="160" height="120" src="thumbs/lassen/IMG_2656.jpg" alt="IMG_2656.jpg" />
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/lassen/IMG_2672.jpg"
+      title=""
+      onclick="return hs.expand(this, config_lassen)">
+      <img width="160" height="120" src="thumbs/lassen/IMG_2672.jpg" alt="IMG_2672.jpg" />
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/lassen/IMG_2674.jpg"
+      title=""
+      onclick="return hs.expand(this, config_lassen)">
+      <img width="160" height="120" src="thumbs/lassen/IMG_2674.jpg" alt="IMG_2674.jpg" />
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/lassen/IMG_2679.jpg"
+      title=""
+      onclick="return hs.expand(this, config_lassen)">
+      <img width="160" height="120" src="thumbs/lassen/IMG_2679.jpg" alt="IMG_2679.jpg" />
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/lassen/IMG_2684.jpg"
+      title=""
+      onclick="return hs.expand(this, config_lassen)">
+      <img width="160" height="120" src="thumbs/lassen/IMG_2684.jpg" alt="IMG_2684.jpg" />
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/lassen/IMG_2697-IMG_2709_panorama.2.jpg"
+      title=""
+      onclick="return hs.expand(this, config_lassen)">
+      <img width="472" height="120" src="thumbs/lassen/IMG_2697-IMG_2709_panorama.2.jpg" alt="IMG_2697-IMG_2709_panorama.2.jpg" />
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/lassen/IMG_2710.jpg"
+      title=""
+      onclick="return hs.expand(this, config_lassen)">
+      <img width="90" height="120" src="thumbs/lassen/IMG_2710.jpg" alt="IMG_2710.jpg" />
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Sailing2"></a>
 <ul class="titlebar">
   <li class="title">
@@ -36,35 +114,50 @@
     <a class="highslide" href="hq/sailing2/IMG_2623.jpg"
       title=""
       onclick="return hs.expand(this, config_sailing2)">
-      <img width="90" height="120" src="thumbs/sailing2/IMG_2623.jpg" alt="IMG_2623.jpg" />
+      <img class="lazy galleries/sailing2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sailing2/IMG_2623.jpg" alt="IMG_2623.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/sailing2/IMG_2623.jpg" alt="IMG_2623.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot2">
     <a class="highslide" href="hq/sailing2/IMG_2626.jpg"
       title=""
       onclick="return hs.expand(this, config_sailing2)">
-      <img width="90" height="120" src="thumbs/sailing2/IMG_2626.jpg" alt="IMG_2626.jpg" />
+      <img class="lazy galleries/sailing2" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sailing2/IMG_2626.jpg" alt="IMG_2626.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/sailing2/IMG_2626.jpg" alt="IMG_2626.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot3">
     <a class="highslide" href="hq/sailing2/IMG_2628.jpg"
       title=""
       onclick="return hs.expand(this, config_sailing2)">
-      <img width="160" height="120" src="thumbs/sailing2/IMG_2628.jpg" alt="IMG_2628.jpg" />
+      <img class="lazy galleries/sailing2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sailing2/IMG_2628.jpg" alt="IMG_2628.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sailing2/IMG_2628.jpg" alt="IMG_2628.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot4">
     <a class="highslide" href="hq/sailing2/IMG_2630.jpg"
       title=""
       onclick="return hs.expand(this, config_sailing2)">
-      <img width="160" height="120" src="thumbs/sailing2/IMG_2630.jpg" alt="IMG_2630.jpg" />
+      <img class="lazy galleries/sailing2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sailing2/IMG_2630.jpg" alt="IMG_2630.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sailing2/IMG_2630.jpg" alt="IMG_2630.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot5">
     <a class="highslide" href="hq/sailing2/IMG_2636.jpg"
       title=""
       onclick="return hs.expand(this, config_sailing2)">
-      <img width="160" height="120" src="thumbs/sailing2/IMG_2636.jpg" alt="IMG_2636.jpg" />
+      <img class="lazy galleries/sailing2" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/sailing2/IMG_2636.jpg" alt="IMG_2636.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/sailing2/IMG_2636.jpg" alt="IMG_2636.jpg" />
+      </noscript>
     </a>
   </div>
   <div style="clear:both"></div>
@@ -553,131 +646,6 @@
       <img class="lazy galleries/laclusaz" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/laclusaz/IMG_2246.jpg" alt="IMG_2246.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/laclusaz/IMG_2246.jpg" alt="IMG_2246.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="redrock"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Red Rock Canyon</h3>
-  </li>
-  <li class="date">
-    November 2014
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/redrock/IMG_2165.jpg"
-      title=""
-      onclick="return hs.expand(this, config_redrock)">
-      <img class="lazy galleries/redrock" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/redrock/IMG_2165.jpg" alt="IMG_2165.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/redrock/IMG_2165.jpg" alt="IMG_2165.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/redrock/IMG_2187.jpg"
-      title=""
-      onclick="return hs.expand(this, config_redrock)">
-      <img class="lazy galleries/redrock" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/redrock/IMG_2187.jpg" alt="IMG_2187.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/redrock/IMG_2187.jpg" alt="IMG_2187.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/redrock/IMG_2193m.jpg"
-      title=""
-      onclick="return hs.expand(this, config_redrock)">
-      <img class="lazy galleries/redrock" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/redrock/IMG_2193m.jpg" alt="IMG_2193m.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/redrock/IMG_2193m.jpg" alt="IMG_2193m.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/redrock/IMG_2199.jpg"
-      title=""
-      onclick="return hs.expand(this, config_redrock)">
-      <img class="lazy galleries/redrock" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/redrock/IMG_2199.jpg" alt="IMG_2199.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/redrock/IMG_2199.jpg" alt="IMG_2199.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/redrock/IMG_2203.jpg"
-      title=""
-      onclick="return hs.expand(this, config_redrock)">
-      <img class="lazy galleries/redrock" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/redrock/IMG_2203.jpg" alt="IMG_2203.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/redrock/IMG_2203.jpg" alt="IMG_2203.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/redrock/IMG_2204.jpg"
-      title=""
-      onclick="return hs.expand(this, config_redrock)">
-      <img class="lazy galleries/redrock" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/redrock/IMG_2204.jpg" alt="IMG_2204.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/redrock/IMG_2204.jpg" alt="IMG_2204.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/redrock/IMG_2210.jpg"
-      title=""
-      onclick="return hs.expand(this, config_redrock)">
-      <img class="lazy galleries/redrock" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/redrock/IMG_2210.jpg" alt="IMG_2210.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/redrock/IMG_2210.jpg" alt="IMG_2210.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/redrock/IMG_2212.jpg"
-      title=""
-      onclick="return hs.expand(this, config_redrock)">
-      <img class="lazy galleries/redrock" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/redrock/IMG_2212.jpg" alt="IMG_2212.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/redrock/IMG_2212.jpg" alt="IMG_2212.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/redrock/PB307910.jpg"
-      title=""
-      onclick="return hs.expand(this, config_redrock)">
-      <img class="lazy galleries/redrock" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/redrock/PB307910.jpg" alt="PB307910.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/redrock/PB307910.jpg" alt="PB307910.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/redrock/PB307958.jpg"
-      title=""
-      onclick="return hs.expand(this, config_redrock)">
-      <img class="lazy galleries/redrock" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/redrock/PB307958.jpg" alt="PB307958.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/redrock/PB307958.jpg" alt="PB307958.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/redrock/PB308056.jpg"
-      title=""
-      onclick="return hs.expand(this, config_redrock)">
-      <img class="lazy galleries/redrock" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/redrock/PB308056.jpg" alt="PB308056.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/redrock/PB308056.jpg" alt="PB308056.jpg" />
       </noscript>
     </a>
   </div>
