--- a/content3.html
+++ b/content3.html
@@ -1,3 +1,58 @@
+<a id="AiguillesRouges"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Aiguilles Rouges</h3>
+  </li>
+  <li class="date">
+    August 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/rouges/DSCN0846.jpg"
+      title=""
+      onclick="return hs.expand(this, config_rouges)">
+      <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/DSCN0846.jpg" alt="DSCN0846.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/rouges/DSCN0846.jpg" alt="DSCN0846.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/rouges/DSCN0852.jpg"
+      title=""
+      onclick="return hs.expand(this, config_rouges)">
+      <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/DSCN0852.jpg" alt="DSCN0852.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/rouges/DSCN0852.jpg" alt="DSCN0852.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/rouges/IMG_0755.jpg"
+      title=""
+      onclick="return hs.expand(this, config_rouges)">
+      <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/IMG_0755.jpg" alt="IMG_0755.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/rouges/IMG_0755.jpg" alt="IMG_0755.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/rouges/IMG_0764.jpg"
+      title=""
+      onclick="return hs.expand(this, config_rouges)">
+      <img class="lazy galleries/rouges" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/rouges/IMG_0764.jpg" alt="IMG_0764.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/rouges/IMG_0764.jpg" alt="IMG_0764.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Fairview"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -875,68 +930,3 @@
   <div style="clear:both"></div>
 </div>
 
-<a id="MickeysBeach"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Mickey's Beach</h3>
-  </li>
-  <li class="date">
-    February 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/mickey/IMG_0200.jpg"
-      title=""
-      onclick="return hs.expand(this, config_mickey)">
-      <img class="lazy galleries/mickey" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/mickey/IMG_0200.jpg" alt="IMG_0200.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/mickey/IMG_0200.jpg" alt="IMG_0200.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/mickey/IMG_0201.jpg"
-      title=""
-      onclick="return hs.expand(this, config_mickey)">
-      <img class="lazy galleries/mickey" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/mickey/IMG_0201.jpg" alt="IMG_0201.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/mickey/IMG_0201.jpg" alt="IMG_0201.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/mickey/IMG_0203.jpg"
-      title=""
-      onclick="return hs.expand(this, config_mickey)">
-      <img class="lazy galleries/mickey" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/mickey/IMG_0203.jpg" alt="IMG_0203.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/mickey/IMG_0203.jpg" alt="IMG_0203.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/mickey/IMG_0210.jpg"
-      title=""
-      onclick="return hs.expand(this, config_mickey)">
-      <img class="lazy galleries/mickey" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/mickey/IMG_0210.jpg" alt="IMG_0210.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/mickey/IMG_0210.jpg" alt="IMG_0210.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/mickey/IMG_0232.jpg"
-      title=""
-      onclick="return hs.expand(this, config_mickey)">
-      <img class="lazy galleries/mickey" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/mickey/IMG_0232.jpg" alt="IMG_0232.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/mickey/IMG_0232.jpg" alt="IMG_0232.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
