--- a/index.html
+++ b/index.html
@@ -162,6 +162,51 @@
   </div>
   <div style="clear:both"></div>
 </div>
+<a id="lassen"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Oz & Gram</h3>
+  </li>
+  <li class="date">
+    June 2015
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/ozgram/IMG_2573.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ozgram)">
+      <img class="lazy galleries/ozgram" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ozgram/IMG_2573.jpg" alt="IMG_2573.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ozgram/IMG_2573.jpg" alt="IMG_2573.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/ozgram/IMG_2577.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ozgram)">
+      <img class="lazy galleries/ozgram" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ozgram/IMG_2577.jpg" alt="IMG_2577.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ozgram/IMG_2577.jpg" alt="IMG_2577.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/ozgram/photo 2.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ozgram)">
+      <img class="lazy galleries/ozgram" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ozgram/photo 2.jpg" alt="photo 2.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ozgram/photo 2.jpg" alt="photo 2.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="seattle"></a>
 <ul class="titlebar">
   <li class="title">
@@ -585,71 +630,6 @@
         Your browser does not support the video tag.
       </video> 
     </div>
-</div>
-<a id="laclusaz"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>La Clusaz</h3>
-  </li>
-  <li class="date">
-    December 2014
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/laclusaz/IMG_2224.jpg"
-      title=""
-      onclick="return hs.expand(this, config_laclusaz)">
-      <img class="lazy galleries/laclusaz" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/laclusaz/IMG_2224.jpg" alt="IMG_2224.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/laclusaz/IMG_2224.jpg" alt="IMG_2224.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/laclusaz/IMG_2228.jpg"
-      title=""
-      onclick="return hs.expand(this, config_laclusaz)">
-      <img class="lazy galleries/laclusaz" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/laclusaz/IMG_2228.jpg" alt="IMG_2228.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/laclusaz/IMG_2228.jpg" alt="IMG_2228.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/laclusaz/IMG_2232.jpg"
-      title=""
-      onclick="return hs.expand(this, config_laclusaz)">
-      <img class="lazy galleries/laclusaz" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/laclusaz/IMG_2232.jpg" alt="IMG_2232.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/laclusaz/IMG_2232.jpg" alt="IMG_2232.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/laclusaz/IMG_2242.jpg"
-      title=""
-      onclick="return hs.expand(this, config_laclusaz)">
-      <img class="lazy galleries/laclusaz" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/laclusaz/IMG_2242.jpg" alt="IMG_2242.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/laclusaz/IMG_2242.jpg" alt="IMG_2242.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/laclusaz/IMG_2246.jpg"
-      title=""
-      onclick="return hs.expand(this, config_laclusaz)">
-      <img class="lazy galleries/laclusaz" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/laclusaz/IMG_2246.jpg" alt="IMG_2246.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/laclusaz/IMG_2246.jpg" alt="IMG_2246.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
 </div>
 
 <div id="more"></div>
