--- a/content2.html
+++ b/content2.html
@@ -1,3 +1,190 @@
+<a id="kokopelli"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Kokopelli</h3>
+  </li>
+  <li class="date">
+    April 2014
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+
+  <div class="photo rot1">
+    <a class="vid_cursor" href="videos/zippy.mp4" onclick="return hs.htmlExpand(this, { contentId: 'zippi-video', preserveContent: false} )">
+      <img class="lazy" width="213" height="120" src="highslide/graphics/ffffff.gif" data-original="videos/thumb_zippi.jpg" alt="" />
+      <noscript>
+        <img width="160" height="120" src="videos/thumb_zippi.jpg" alt="" />
+      </noscript>
+    </a>
+  </div>
+
+  <div class="photo rot1">
+    <a class="highslide" href="hq/kokopelli/00.jpg"
+      title="About to embark on a 3 days trip from Fruita, Colorado to Moab, Utah on the Kokopelli trail."
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/00.jpg" alt="00.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/kokopelli/00.jpg" alt="00.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/kokopelli/10.jpg"
+      title="During the first day, the trail follows closely the Colorado river."
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/10.jpg" alt="10.jpg" />
+      <noscript>
+        <img width="180" height="120" src="thumbs/kokopelli/10.jpg" alt="10.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/kokopelli/20.jpg"
+      title="The trail really borders the edge of the canyon and offers spectacular views."
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/20.jpg" alt="20.jpg" />
+      <noscript>
+        <img width="180" height="120" src="thumbs/kokopelli/20.jpg" alt="20.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/kokopelli/25.jpg"
+      title=""
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/25.jpg" alt="25.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/kokopelli/25.jpg" alt="25.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/kokopelli/30.jpg"
+      title="First camp after over 50 miles of rough trails. We had an assistance vehicle carrying everything for us from leg to leg."
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/30.jpg" alt="30.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/kokopelli/30.jpg" alt="30.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/kokopelli/40.jpg"
+      title="Looking at the La Sal mountain which we will climb over during the next day. Intimidating!"
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/40.jpg" alt="40.jpg" />
+      <noscript>
+        <img width="180" height="120" src="thumbs/kokopelli/40.jpg" alt="40.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/kokopelli/50.jpg"
+      title="Oscar, James, and I, in the rather sandy Yellow Jacket Canyon (second leg of the second day)."
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/50.jpg" alt="50.jpg" />
+      <noscript>
+        <img width="180" height="120" src="thumbs/kokopelli/50.jpg" alt="50.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/kokopelli/60.jpg"
+      title="Jacob and the La Sal slowly getting closer."
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/60.jpg" alt="60.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/kokopelli/60.jpg" alt="60.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/kokopelli/65.jpg"
+      title="Our second camp was in the wilderness and quite high. I drove the last leg and was really relieved when the rest of the team finally showed up in the dark, more than 2 hours late."
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/65.jpg" alt="65.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/kokopelli/65.jpg" alt="65.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/kokopelli/70.jpg"
+      title="Morning of the last day, gaining altitude on the way to top of the La Sal. King Fisher in the background."
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/70.jpg" alt="70.jpg" />
+      <noscript>
+        <img width="180" height="120" src="thumbs/kokopelli/70.jpg" alt="70.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/kokopelli/75.jpg"
+      title="Second false summit of the morning (third day), just 2 more (big) cols to Moab."
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/75.jpg" alt="75.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/kokopelli/75.jpg" alt="75.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/kokopelli/80.jpg"
+      title="Benji having fun on the way up to the Porcupine Ridge trail."
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/80.jpg" alt="80.jpg" />
+      <noscript>
+        <img width="180" height="120" src="thumbs/kokopelli/80.jpg" alt="80.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/kokopelli/90.jpg"
+      title="James, Jacob, Benji, and Oscar, on top of Porcupine. Ready for 15 miles of technical downhill."
+      onclick="return hs.expand(this, config_kokopelli)">
+      <img class="lazy galleries/kokopelli" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/kokopelli/90.jpg" alt="90.jpg" />
+      <noscript>
+        <img width="180" height="120" src="thumbs/kokopelli/90.jpg" alt="90.jpg" />
+      </noscript>
+    </a>
+  </div>
+
+  <div class="photo rot2">
+    <a class="vid_cursor" href="videos/porcupine.mp4" onclick="return hs.htmlExpand(this, { contentId: 'porcupine-video', preserveContent: false} )">
+      <img class="lazy" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="videos/thumb_porcupine.jpg" alt="" />
+      <noscript>
+        <img width="160" height="120" src="videos/thumb_porcupine.jpg" alt="" />
+      </noscript>
+    </a>
+  </div>
+
+  <div style="clear:both"></div>
+</div>
+
+<div class="highslide-html-content" id="zippi-video"
+    style="width: 641px">
+    <div class="highslide-body">
+      <video class="video" width="640" height="360" controls="controls" preload="none" poster="videos/zippi.jpg">
+        <source src="videos/zippi.mp4" type="video/mp4" />
+        <source src="videos/zippi.webm" type="video/webm" />
+        Your browser does not support the video tag.
+      </video> 
+    </div>
+</div>
+
+<div class="highslide-html-content" id="porcupine-video"
+    style="width: 641px">
+    <div class="highslide-body">
+      <video class="video" width="640" height="480" controls="controls" preload="none" poster="videos/porcupine.jpg">
+        <source src="videos/porcupine.mp4" type="video/mp4" />
+        <source src="videos/porcupine.webm" type="video/webm" />
+        Your browser does not support the video tag.
+      </video> 
+    </div>
+</div>
 <a id="yoclassics"></a>
 <ul class="titlebar">
   <li class="title">
@@ -983,88 +1170,3 @@
     </div>
 </div>
 
-<a id="Marion"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Arête à Marion</h3>
-  </li>
-  <li class="date">
-    September 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/marion/IMG_0772.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion)">
-      <img class="lazy galleries/marion" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion/IMG_0772.jpg" alt="IMG_0772.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/marion/IMG_0772.jpg" alt="IMG_0772.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/marion/IMG_0788.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion)">
-      <img class="lazy galleries/marion" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion/IMG_0788.jpg" alt="IMG_0788.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/marion/IMG_0788.jpg" alt="IMG_0788.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/marion/IMG_0794.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion)">
-      <img class="lazy galleries/marion" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion/IMG_0794.jpg" alt="IMG_0794.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/marion/IMG_0794.jpg" alt="IMG_0794.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/marion/IMG_0798.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion)">
-      <img class="lazy galleries/marion" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion/IMG_0798.jpg" alt="IMG_0798.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/marion/IMG_0798.jpg" alt="IMG_0798.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/marion/IMG_0802.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion)">
-      <img class="lazy galleries/marion" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion/IMG_0802.jpg" alt="IMG_0802.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/marion/IMG_0802.jpg" alt="IMG_0802.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/marion/IMG_0815.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion)">
-      <img class="lazy galleries/marion" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion/IMG_0815.jpg" alt="IMG_0815.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/marion/IMG_0815.jpg" alt="IMG_0815.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/marion/IMG_0824.jpg"
-      title=""
-      onclick="return hs.expand(this, config_marion)">
-      <img class="lazy galleries/marion" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/marion/IMG_0824.jpg" alt="IMG_0824.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/marion/IMG_0824.jpg" alt="IMG_0824.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
